fix: hide controls on mobile

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -340,4 +340,7 @@ body {
   .interest-filter-icon {
     display: none;
   }
+  .leaflet-bottom.leaflet-left {
+    display: none;
+  }
 }
